Fix labnavigation mobile styling.

--- a/src/components/LabNavigation/labnavigation.scss
+++ b/src/components/LabNavigation/labnavigation.scss
@@ -10,18 +10,42 @@
 
     .mobile-nav-visible & {
       display: block;
+      margin-top: var(--spacing);
+    }
+  }
+
+  .btn {
+    min-width: 8rem;
+    box-shadow: none;
+    background-color: var(--color-primary-d10);
+
+    @include media-breakpoint-down(md) {
+      width: 10rem;
+      text-align: center;
+      margin: 0;
+      box-shadow: 0;
+
+      span {
+        padding-left: var(--spacing);
+      }
+
+      &:hover,
+      &:focus {
+        top: 0;
+        left: 0;
+      }
     }
   }
 }
 
 .labnavigation_menu {
   position: absolute;
+  width: 10rem;
   list-style-type: none;
-  top: calc(100% + var(--spacing-xs));
+  top: 100%;
   left: 50%;
   transform: translate3d(-50%, 0, 0);
   margin-top: 0;
-  margin-left: -0.15rem;
   padding: 0;
   background-color: var(--color-primary-d10);
   z-index: 10;
@@ -31,9 +55,9 @@
   }
 
   @include media-breakpoint-up(lg) {
-    min-width: calc(100% - var(--spacing));
+    width: calc(100% - var(--spacing));
+    top: calc(100% + var(--spacing-xs));
     left: calc(var(--spacing-xs) + 1px);
-    margin: 0;
     transform: none;
   }
 }
