--- a/src/components/Navigation/navigation.scss
+++ b/src/components/Navigation/navigation.scss
@@ -12,7 +12,8 @@
   @include media-breakpoint-down(md) {
     text-align: center;
     display: none;
-  
+    margin: var(--spacing) 0;
+    
     li {
       display: block;
       padding-left: 0;
