--- a/src/styles/settings/typography.scss
+++ b/src/styles/settings/typography.scss
@@ -2,14 +2,10 @@
 
 @font-face {
   font-family: 'Anivers';
-  src: url('../assets/fonts/anivers.otf') format('ptf');
+  src: url('../assets/fonts/anivers-bold.woff2') format('woff2'),
+    url('../assets/fonts/anivers-bold.woff') format('woff'),
+    url('../assets/fonts/anivers-bold.otf') format('otf');
   font-weight: normal;
-}
-
-@font-face {
-  font-family: 'Anivers';
-  src: url('../assets/fonts/anivers-bold.otf') format('otf');
-  font-weight: bold;
 }
 
 :root {
@@ -19,8 +15,8 @@
 
   // Font sizes
   --font-size: 16px;
-  --font-size-xs: calc(var(--font-size) * .68);
-  --font-size-sm: calc(var(--font-size) * .875);
+  --font-size-xs: calc(var(--font-size) * 0.68);
+  --font-size-sm: calc(var(--font-size) * 0.875);
   --font-size-md: calc(var(--font-size) * 1.06);
   --font-size-lg: calc(var(--font-size) * 1.69);
   --font-size-xl: calc(var(--font-size) * 2.25);
